$Id$

2016-03-20  Christian Franke  <franke@computer.org>

	nvmecmds.cpp, nvmecmds.h, nvmeprint.cpp, nvmeprint.h, smartctl.cpp:
	Add options '-l error[,NUM]' and '-l nvmelog,PAGE,SIZE' for NVMe
	devices.
	smartctl.8.in: Document '-l error[,NUM]', '-l nvmelog,PAGE,SIZE'
	and '-r nvmeioctl'.

2016-03-18  Christian Franke  <franke@computer.org>

	Add basic NVMe support for smartctl (-i -H -A) on Linux:
	Makefile.am: Add new files.
	dev_interface.cpp, dev_interface.h: Add class nvme_device.
	linux_nvme_ioctl.h: New file imported from Linux kernel sources
	(include/uapi/linux/nvme_ioctl.h 9d99a8d 2015-10-09).
	nvmecmds.cpp, nvmecmds.h: New module with NVMe command wrapper
	functions for smartctl and smartd.
	nvmeprint.cpp, nvmeprint.h: New module with nvmePrintMain().
	smartctl.cpp: Add nvmePrintMain() support.
	os_linux.cpp: Add class linux_nvme_device.
	os_win32/vc10/smart*.vcxproj*: Add new files.
	smartctl.8.in: Document NVMe support.

2016-03-14  Douglas Gilbert  <dgilbert@interlog.com>

	scsiprint.cpp: work on LB provisioning corner cases; LBPRZ now
	3 bits wide (in response to ticket #664)

2016-03-14  Alex Samorukov  <samm@os2.kiev.ua>

	drivedb.h:
	 - extend Apple SSD regexp (ticket #668)
	 - Add OCZ VeloDrive R (ticket #667)

2016-03-12  Alex Samorukov  <samm@os2.kiev.ua>

	drivedb.h: Add Phison Driven SSDs:
	 - Kingston UV300 SSD series (ticket #663)
	 - Kingston SSDNow KC310/V310
	 - HyperX Savage

2016-03-11  Alex Samorukov  <samm@os2.kiev.ua>

	drivedb.h: Add Kingston UV300 SSD series

2016-03-06  Christian Franke  <franke@computer.org>

	drivedb.h: Samsung based SSDs: Fix PM863 regexp, attribute IDs and
	name length (regression from r4227).

2016-03-03  Alex Samorukov  <samm@os2.kiev.ua>

	drivedb.h: Adata HD710 1TB USB3 (ticket #662)

2016-02-29  Alex Samorukov  <samm@os2.kiev.ua>

	drivedb.h: PM863 Series (ticket #661)

2016-02-28  Alex Samorukov  <samm@os2.kiev.ua>

	drivedb.h: OWC Aura Pro 480 GB (ticket #660)
